--- a/embedding.ipynb
+++ b/embedding.ipynb
@@ -55,11 +55,89 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "58e83497",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "##Define the vocabulary size\n",
+    "voc_size=10000"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "7a21f598",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[[5168, 8796, 4463, 8064],\n",
+       " [5168, 3651, 4463, 2617],\n",
+       " [6780, 8764, 6657, 2430, 7711],\n",
+       " [6780, 8764, 6657, 2430, 1526],\n",
+       " [8918, 5168, 5564, 4463, 9717],\n",
+       " [530, 130, 1909, 2430]]"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "one_hot_repr=[one_hot(words, voc_size) for words in sent]\n",
+    "one_hot_repr"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "89c5c0b1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "##Word Embedding Representation\n",
+    "from tensorflow.keras.layers import Embedding\n",
+    "from tensorflow.keras.preprocessing.sequence import pad_sequences\n",
+    "from tensorflow.keras.models import Sequential"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "3e46b1b0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "5bace28c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[   0    0    0    0 5168 8796 4463 8064]\n",
+      " [   0    0    0    0 5168 3651 4463 2617]\n",
+      " [   0    0    0 6780 8764 6657 2430 7711]\n",
+      " [   0    0    0 6780 8764 6657 2430 1526]\n",
+      " [   0    0    0 8918 5168 5564 4463 9717]\n",
+      " [   0    0    0    0  530  130 1909 2430]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "sent_length=8\n",
+    "embedding_docs=pad_sequences(one_hot_repr,padding='pre',maxlen=sent_length)\n",
+    "print(embedding_docs)\n"
+   ]
   }
  ],
  "metadata": {
