--- a/embedding.ipynb
+++ b/embedding.ipynb
@@ -138,6 +138,289 @@
     "embedding_docs=pad_sequences(one_hot_repr,padding='pre',maxlen=sent_length)\n",
     "print(embedding_docs)\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "7ca44425",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "##Feature Representation\n",
+    "dim=10\n",
+    "model=Sequential()\n",
+    "model.add(Embedding(voc_size,dim,input_length=sent_length))\n",
+    "model.compile('adam','mse')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "ad886161",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Model: \"sequential\"\n",
+      "_________________________________________________________________\n",
+      " Layer (type)                Output Shape              Param #   \n",
+      "=================================================================\n",
+      " embedding (Embedding)       (None, 8, 10)             100000    \n",
+      "                                                                 \n",
+      "=================================================================\n",
+      "Total params: 100000 (390.62 KB)\n",
+      "Trainable params: 100000 (390.62 KB)\n",
+      "Non-trainable params: 0 (0.00 Byte)\n",
+      "_________________________________________________________________\n"
+     ]
+    }
+   ],
+   "source": [
+    "model.summary()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "84901c10",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1/1 [==============================] - 0s 157ms/step\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "array([[[ 0.02822769,  0.02023902, -0.03934656, -0.04940864,\n",
+       "         -0.02548226, -0.03141075, -0.02283551, -0.04226364,\n",
+       "          0.00766582,  0.03651175],\n",
+       "        [ 0.02822769,  0.02023902, -0.03934656, -0.04940864,\n",
+       "         -0.02548226, -0.03141075, -0.02283551, -0.04226364,\n",
+       "          0.00766582,  0.03651175],\n",
+       "        [ 0.02822769,  0.02023902, -0.03934656, -0.04940864,\n",
+       "         -0.02548226, -0.03141075, -0.02283551, -0.04226364,\n",
+       "          0.00766582,  0.03651175],\n",
+       "        [ 0.02822769,  0.02023902, -0.03934656, -0.04940864,\n",
+       "         -0.02548226, -0.03141075, -0.02283551, -0.04226364,\n",
+       "          0.00766582,  0.03651175],\n",
+       "        [ 0.0454059 ,  0.00702329, -0.00705301,  0.01038563,\n",
+       "         -0.02590351,  0.03109548, -0.04408446,  0.01961576,\n",
+       "          0.01005448, -0.02068372],\n",
+       "        [ 0.00518906,  0.03777012,  0.00282504,  0.04572897,\n",
+       "          0.00467499, -0.0284184 ,  0.00958728,  0.03185603,\n",
+       "         -0.03761375, -0.03771489],\n",
+       "        [ 0.01253771,  0.03168184,  0.00485621, -0.04058738,\n",
+       "         -0.0143896 ,  0.03089852, -0.00267183, -0.01228268,\n",
+       "         -0.03995732, -0.04213002],\n",
+       "        [-0.04565585, -0.01277943, -0.02784264,  0.0012433 ,\n",
+       "          0.01642131, -0.03623527,  0.01249551, -0.0401325 ,\n",
+       "         -0.02525207, -0.01775329]],\n",
+       "\n",
+       "       [[ 0.02822769,  0.02023902, -0.03934656, -0.04940864,\n",
+       "         -0.02548226, -0.03141075, -0.02283551, -0.04226364,\n",
+       "          0.00766582,  0.03651175],\n",
+       "        [ 0.02822769,  0.02023902, -0.03934656, -0.04940864,\n",
+       "         -0.02548226, -0.03141075, -0.02283551, -0.04226364,\n",
+       "          0.00766582,  0.03651175],\n",
+       "        [ 0.02822769,  0.02023902, -0.03934656, -0.04940864,\n",
+       "         -0.02548226, -0.03141075, -0.02283551, -0.04226364,\n",
+       "          0.00766582,  0.03651175],\n",
+       "        [ 0.02822769,  0.02023902, -0.03934656, -0.04940864,\n",
+       "         -0.02548226, -0.03141075, -0.02283551, -0.04226364,\n",
+       "          0.00766582,  0.03651175],\n",
+       "        [ 0.0454059 ,  0.00702329, -0.00705301,  0.01038563,\n",
+       "         -0.02590351,  0.03109548, -0.04408446,  0.01961576,\n",
+       "          0.01005448, -0.02068372],\n",
+       "        [ 0.0262582 ,  0.0272025 , -0.03867077, -0.00028186,\n",
+       "         -0.00726711,  0.01091124,  0.01817068,  0.02164683,\n",
+       "         -0.02031524,  0.00447208],\n",
+       "        [ 0.01253771,  0.03168184,  0.00485621, -0.04058738,\n",
+       "         -0.0143896 ,  0.03089852, -0.00267183, -0.01228268,\n",
+       "         -0.03995732, -0.04213002],\n",
+       "        [-0.02398853, -0.04931207, -0.02060069,  0.01795674,\n",
+       "         -0.04034116, -0.0244201 ,  0.0297764 ,  0.00193665,\n",
+       "          0.04543859, -0.03470272]],\n",
+       "\n",
+       "       [[ 0.02822769,  0.02023902, -0.03934656, -0.04940864,\n",
+       "         -0.02548226, -0.03141075, -0.02283551, -0.04226364,\n",
+       "          0.00766582,  0.03651175],\n",
+       "        [ 0.02822769,  0.02023902, -0.03934656, -0.04940864,\n",
+       "         -0.02548226, -0.03141075, -0.02283551, -0.04226364,\n",
+       "          0.00766582,  0.03651175],\n",
+       "        [ 0.02822769,  0.02023902, -0.03934656, -0.04940864,\n",
+       "         -0.02548226, -0.03141075, -0.02283551, -0.04226364,\n",
+       "          0.00766582,  0.03651175],\n",
+       "        [-0.03978155, -0.04638051, -0.0270032 ,  0.01916994,\n",
+       "          0.0054509 , -0.02235547, -0.03742754,  0.03163377,\n",
+       "         -0.04744286, -0.01098508],\n",
+       "        [ 0.03662455,  0.03763707,  0.02044768,  0.02442485,\n",
+       "         -0.03477209, -0.04751306,  0.04734818, -0.02206118,\n",
+       "          0.04731855, -0.02633406],\n",
+       "        [-0.02908839, -0.0021633 ,  0.001745  ,  0.03617729,\n",
+       "          0.02413041,  0.02200624,  0.04265613,  0.00446824,\n",
+       "         -0.00123557, -0.01469065],\n",
+       "        [-0.01422364, -0.02473497,  0.0161618 , -0.0445101 ,\n",
+       "          0.03871265,  0.04510194,  0.02625519,  0.02852598,\n",
+       "         -0.00189338,  0.03397573],\n",
+       "        [-0.02639359, -0.00716775,  0.02079816,  0.04449933,\n",
+       "          0.02578381,  0.00208782, -0.04982961, -0.0005638 ,\n",
+       "         -0.04826671, -0.03722975]],\n",
+       "\n",
+       "       [[ 0.02822769,  0.02023902, -0.03934656, -0.04940864,\n",
+       "         -0.02548226, -0.03141075, -0.02283551, -0.04226364,\n",
+       "          0.00766582,  0.03651175],\n",
+       "        [ 0.02822769,  0.02023902, -0.03934656, -0.04940864,\n",
+       "         -0.02548226, -0.03141075, -0.02283551, -0.04226364,\n",
+       "          0.00766582,  0.03651175],\n",
+       "        [ 0.02822769,  0.02023902, -0.03934656, -0.04940864,\n",
+       "         -0.02548226, -0.03141075, -0.02283551, -0.04226364,\n",
+       "          0.00766582,  0.03651175],\n",
+       "        [-0.03978155, -0.04638051, -0.0270032 ,  0.01916994,\n",
+       "          0.0054509 , -0.02235547, -0.03742754,  0.03163377,\n",
+       "         -0.04744286, -0.01098508],\n",
+       "        [ 0.03662455,  0.03763707,  0.02044768,  0.02442485,\n",
+       "         -0.03477209, -0.04751306,  0.04734818, -0.02206118,\n",
+       "          0.04731855, -0.02633406],\n",
+       "        [-0.02908839, -0.0021633 ,  0.001745  ,  0.03617729,\n",
+       "          0.02413041,  0.02200624,  0.04265613,  0.00446824,\n",
+       "         -0.00123557, -0.01469065],\n",
+       "        [-0.01422364, -0.02473497,  0.0161618 , -0.0445101 ,\n",
+       "          0.03871265,  0.04510194,  0.02625519,  0.02852598,\n",
+       "         -0.00189338,  0.03397573],\n",
+       "        [-0.02612267,  0.04432927, -0.00398704, -0.02024188,\n",
+       "         -0.01667507, -0.0006969 ,  0.02485234,  0.03118566,\n",
+       "          0.02839681,  0.03287343]],\n",
+       "\n",
+       "       [[ 0.02822769,  0.02023902, -0.03934656, -0.04940864,\n",
+       "         -0.02548226, -0.03141075, -0.02283551, -0.04226364,\n",
+       "          0.00766582,  0.03651175],\n",
+       "        [ 0.02822769,  0.02023902, -0.03934656, -0.04940864,\n",
+       "         -0.02548226, -0.03141075, -0.02283551, -0.04226364,\n",
+       "          0.00766582,  0.03651175],\n",
+       "        [ 0.02822769,  0.02023902, -0.03934656, -0.04940864,\n",
+       "         -0.02548226, -0.03141075, -0.02283551, -0.04226364,\n",
+       "          0.00766582,  0.03651175],\n",
+       "        [ 0.04327616, -0.00482212,  0.03921446,  0.03372136,\n",
+       "          0.01476428,  0.00204547,  0.03604898, -0.04934813,\n",
+       "         -0.02047863, -0.0388495 ],\n",
+       "        [ 0.0454059 ,  0.00702329, -0.00705301,  0.01038563,\n",
+       "         -0.02590351,  0.03109548, -0.04408446,  0.01961576,\n",
+       "          0.01005448, -0.02068372],\n",
+       "        [-0.03199289,  0.0276993 ,  0.00244689, -0.00400751,\n",
+       "          0.01178862, -0.01894679, -0.01257051,  0.01828636,\n",
+       "          0.02327884, -0.01958493],\n",
+       "        [ 0.01253771,  0.03168184,  0.00485621, -0.04058738,\n",
+       "         -0.0143896 ,  0.03089852, -0.00267183, -0.01228268,\n",
+       "         -0.03995732, -0.04213002],\n",
+       "        [-0.02931024,  0.01924643,  0.02861447,  0.02637463,\n",
+       "         -0.02286801, -0.00103344, -0.00871037, -0.03373801,\n",
+       "         -0.0421209 ,  0.04363871]],\n",
+       "\n",
+       "       [[ 0.02822769,  0.02023902, -0.03934656, -0.04940864,\n",
+       "         -0.02548226, -0.03141075, -0.02283551, -0.04226364,\n",
+       "          0.00766582,  0.03651175],\n",
+       "        [ 0.02822769,  0.02023902, -0.03934656, -0.04940864,\n",
+       "         -0.02548226, -0.03141075, -0.02283551, -0.04226364,\n",
+       "          0.00766582,  0.03651175],\n",
+       "        [ 0.02822769,  0.02023902, -0.03934656, -0.04940864,\n",
+       "         -0.02548226, -0.03141075, -0.02283551, -0.04226364,\n",
+       "          0.00766582,  0.03651175],\n",
+       "        [ 0.02822769,  0.02023902, -0.03934656, -0.04940864,\n",
+       "         -0.02548226, -0.03141075, -0.02283551, -0.04226364,\n",
+       "          0.00766582,  0.03651175],\n",
+       "        [ 0.03665372, -0.03920614,  0.01209646,  0.01927337,\n",
+       "         -0.01601548, -0.02013174,  0.00694345, -0.03707717,\n",
+       "          0.00630732,  0.03002118],\n",
+       "        [-0.00862554, -0.03582361, -0.02400579, -0.01257559,\n",
+       "          0.0067672 , -0.03458575, -0.00748163,  0.0322901 ,\n",
+       "          0.03843547,  0.02011981],\n",
+       "        [ 0.03287942, -0.04398534,  0.04469042, -0.03346195,\n",
+       "         -0.04699477, -0.01897771,  0.01085915,  0.00386363,\n",
+       "         -0.02622718,  0.00617119],\n",
+       "        [-0.01422364, -0.02473497,  0.0161618 , -0.0445101 ,\n",
+       "          0.03871265,  0.04510194,  0.02625519,  0.02852598,\n",
+       "         -0.00189338,  0.03397573]]], dtype=float32)"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "model.predict(embedding_docs)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "4b9dbe55",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([   0,    0,    0,    0, 5168, 8796, 4463, 8064])"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "embedding_docs[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "7243c7ee",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1/1 [==============================] - 0s 100ms/step\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 0.02822769,  0.02023902, -0.03934656, -0.04940864, -0.02548226,\n",
+       "        -0.03141075, -0.02283551, -0.04226364,  0.00766582,  0.03651175],\n",
+       "       [ 0.02822769,  0.02023902, -0.03934656, -0.04940864, -0.02548226,\n",
+       "        -0.03141075, -0.02283551, -0.04226364,  0.00766582,  0.03651175],\n",
+       "       [ 0.02822769,  0.02023902, -0.03934656, -0.04940864, -0.02548226,\n",
+       "        -0.03141075, -0.02283551, -0.04226364,  0.00766582,  0.03651175],\n",
+       "       [ 0.02822769,  0.02023902, -0.03934656, -0.04940864, -0.02548226,\n",
+       "        -0.03141075, -0.02283551, -0.04226364,  0.00766582,  0.03651175],\n",
+       "       [ 0.0454059 ,  0.00702329, -0.00705301,  0.01038563, -0.02590351,\n",
+       "         0.03109548, -0.04408446,  0.01961576,  0.01005448, -0.02068372],\n",
+       "       [ 0.00518906,  0.03777012,  0.00282504,  0.04572897,  0.00467499,\n",
+       "        -0.0284184 ,  0.00958728,  0.03185603, -0.03761375, -0.03771489],\n",
+       "       [ 0.01253771,  0.03168184,  0.00485621, -0.04058738, -0.0143896 ,\n",
+       "         0.03089852, -0.00267183, -0.01228268, -0.03995732, -0.04213002],\n",
+       "       [-0.04565585, -0.01277943, -0.02784264,  0.0012433 ,  0.01642131,\n",
+       "        -0.03623527,  0.01249551, -0.0401325 , -0.02525207, -0.01775329]],\n",
+       "      dtype=float32)"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "model.predict(embedding_docs[0])"
+   ]
   }
  ],
  "metadata": {
