--- a/simplernn.ipynb
+++ b/simplernn.ipynb
@@ -2379,8 +2379,85 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "id": "71785de1",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[   0,    0,    0, ...,   19,  178,   32],\n",
+       "       [   0,    0,    0, ...,   16,  145,   95],\n",
+       "       [   0,    0,    0, ...,    7,  129,  113],\n",
+       "       ...,\n",
+       "       [   0,    0,    0, ...,    4, 3586,    2],\n",
+       "       [   0,    0,    0, ...,   12,    9,   23],\n",
+       "       [   0,    0,    0, ...,  204,  131,    9]])"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from tensorflow.keras.preprocessing import sequence\n",
+    "max_len=500\n",
+    "X_train=sequence.pad_sequences(X_train,maxlen=max_len)\n",
+    "X_test=sequence.pad_sequences(X_test,maxlen=max_len)\n",
+    "X_train"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "c7fd38a3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "##Train a Simple RNN\n",
+    "model=Sequential()\n",
+    "model.add(Embedding(max_features,128,input_length=max_len))\n",
+    "model.add(SimpleRNN(128,activation='relu'))\n",
+    "model.add(Dense(1,activation='sigmoid'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "7a32196b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Model: \"sequential\"\n",
+      "_________________________________________________________________\n",
+      " Layer (type)                Output Shape              Param #   \n",
+      "=================================================================\n",
+      " embedding (Embedding)       (None, 500, 128)          1280000   \n",
+      "                                                                 \n",
+      " simple_rnn (SimpleRNN)      (None, 128)               32896     \n",
+      "                                                                 \n",
+      " dense (Dense)               (None, 1)                 129       \n",
+      "                                                                 \n",
+      "=================================================================\n",
+      "Total params: 1313025 (5.01 MB)\n",
+      "Trainable params: 1313025 (5.01 MB)\n",
+      "Non-trainable params: 0 (0.00 Byte)\n",
+      "_________________________________________________________________\n"
+     ]
+    }
+   ],
+   "source": [
+    "model.summary()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "818f71c2",
    "metadata": {},
    "outputs": [],
    "source": []
